# food_auto

./: .env  .env.example  .gitignore  README.md  pyproject.toml
food_auto/: batch_cooking.py  datatypes.py  main.py  recipe_reader.py
specs/: batch_cooking_instructions.md
